using an alpine distribution and jlink to construct a minimal JRE for the docker image. was able to cut 150megs off the metatron docker.